--- a/functions/ejsviews/partials/nav.ejs
+++ b/functions/ejsviews/partials/nav.ejs
@@ -25,7 +25,10 @@
             <a class="nav-link" href="/b/signout">Sign Out</a>
          </li>
          <% } %>
-
+         <li class="nav-item <%= page ==='shoppingcart' ? 'active' : '' %>">
+            <a class="nav-link" href="/b/shoppingcart">
+               ShoppingCart<%= cartCount > 0 ? `(${cartCount})` : '' %></a>
+         </li>
       </ul>
     </div>
   </nav>
