--- a/functions/ejsviews/signin.ejs
+++ b/functions/ejsviews/signin.ejs
@@ -12,18 +12,25 @@
     <body>
      <%- include('partials/nav.ejs' , {page: 'signin', user}) %>
 
-    <% if (error) { %>
-        <p style="color: red;"><%= error %></p>
-    <% } %>
     
 
     
     <form class="form-signin" action="/b/signin" method="post">
         <h3>Please Sign in</h3>
-            <input type="email" class="form-control" name="email" placeholder="Email address">
+        <% if (error) { %>
+          <p style="color: red;"><%= error %></p>
+      <% } %>
+  
+          <input type="email" class="form-control" name="email" placeholder="Email address">
             <input type="password" class="form-control" name="password" placeholder="Password">
             <button type="submit" class="btn btn-primary">Sign In</button>
-        </form>
+    
+<br>
+<div>
+  Do Not Have An Account?
+  <a href='/b/signup'>Create an account.</a>
+</div>    
+          </form>
 
   </head>
 
