--- a/functions/ejsviews/storefront.ejs
+++ b/functions/ejsviews/storefront.ejs
@@ -25,12 +25,13 @@
             <div class="card-body">
               <h5 class="card-title"><%= p.data.name %></h5>
               <p class="card-text">$(<%= p.data.price %>) <br> <%= p.data.summary %></p>
-              <a href="#" class="btn btn-primary">Buy</a>
+              <form action="/b/add2cart" method="post">
+                <input type="hidden" name="docId" value="<%= p.id %>">
+                <button type="submit" class="btn btn-primary">Add to ShoppingCart</button>
+              </form>
             </div>
           </div>
         <% } %>
-
-    
     <% } %>
 
     <%- include('partials/scripts.ejs') %>
