--- a/functions/ejsviews/signin.ejs
+++ b/functions/ejsviews/signin.ejs
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <%- include('partials/header.ejs') %>
-
+    <base href="/">
       <title> Sign In</title>
     </head>
     <body>
@@ -29,7 +29,13 @@
 <div>
   Do Not Have An Account?
   <a href='/b/signup'>Create an account.</a>
+</div>
+<br>
+<div>
+  Need a password?
+    <a href='/show' class="btn btn-outline-primary">Password Generator</a>
 </div>    
+
           </form>
 
   </head>
