--- a/functions/ejsviews/profile.ejs
+++ b/functions/ejsviews/profile.ejs
@@ -17,7 +17,7 @@
     <table class="table table-stripped">
       <tr>
         <td>Display Name</td>
-        <td><%= user.displayName %></td>
+        <td><%= user.name %></td>
       </tr>
       <tr>
         <td>Email</td>
@@ -25,7 +25,7 @@
       </tr>
       <tr>
         <td>Phone</td>
-        <td><%= user.phoneNumber %></td>
+        <td><%= user.phone_number %></td>
       </tr>
       <tr>
         <td>UID</td>
@@ -33,7 +33,7 @@
       </tr>
       <tr>
         <td>Profile Image</td>
-        <td><img src="<%= user.photoURL %>"></td>
+        <td><img src="<%= user.picture %>"></td>
       </tr>
     </table>
 
